<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_final"
    android:orientation="vertical"
    android:weightSum="12">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4">

        <ImageView
            android:id="@+id/logo"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edt_username_background"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_gravity="start"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/edt_username_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_gravity="start"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_login_background"
                android:text="@string/login_btn"
                android:textColor="#fff"
                android:textSize="20sp" />

            <Button
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_register_background"
                android:text="@string/register_btn"
                android:textColor="#fff"
                android:textSize="20sp"
                />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button_facebook"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                style="@style/FacebookLoginButton"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>


